[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Projectiles/LeafShieldProj.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Spells/Nature/leaf.png" type="Texture" id=2]
[ext_resource path="res://Resources/SFX/wav/leaf.wav" type="Sample" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="Animation" id=2]

resource_name = "death"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "free_scn"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.3, 0.3 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "spin"
length = 0.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_deg")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ) ]
}

[sub_resource type="Resource" id=4]

samples/leaf = {
"db": 0.0,
"pitch": 1.0,
"sample": ExtResource( 3 )
}

[node name="LeafShieldProj" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/margin = 0.08
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
self_modulate = Color( 0.723389, 1, 0.65625, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="."]

visible = false
input_pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform2D( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/death = SubResource( 2 )
anims/spin = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "spin"

[node name="LifeTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.9
one_shot = true
autostart = false

[node name="SFX" type="AudioStreamPlayer2D" parent="."]

volume_db = 0.0
pitch_scale = 1.0
attenuation_min_distance = 1.0
attenuation_max_distance = 2048.0
attenuation_distance_exp = 1.0
polyphony = 1
samples = SubResource( 4 )
random_pitch = 0.0

[connection signal="area_entered"  from="Area2D"  to="." method="_on_Area2D_area_enter" binds=[  ]]

[connection signal="body_entered"  from="Area2D"  to="." method="_on_Area2D_body_enter" binds=[  ]]

[connection signal="timeout"  from="LifeTimer"  to="." method="_on_LifeTimer_timeout" binds=[  ]]
